# ocn-common

./: .coverage  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: contracts.yml
common/events/v1/: okra.bnpl_quote.v1.schema.json  onyx.kyb_verified.v1.schema.json  orca.decision.v1.schema.json  orca.explanation.v1.schema.json  orion.explanation.v1.schema.json  weave.audit.v1.schema.json
common/mandates/: actor_profile.schema.json  agent_presence.schema.json  cart_mandate.schema.json  intent_mandate.schema.json  modality.schema.json  payment_mandate.schema.json
docs/: ap2_contract.md  cloudevents_reference.md  keys.md  migration_guide_ap2.md  observability.md
examples/ap2/: approve.json  decline.json  review.json
examples/events/: audit_approve.json  decision_approve.json  explanation_approve.json  okra_bnpl_quote_example.json  onyx_kyb_verified_example.json  orion_explanation_example.json
infra/logging/: README.md
src/ocn_common/: contracts.py  trace.py
tests/: test_contracts.py  test_examples_validation.py  test_new_events_validate.py  test_trace.py
