[project]
name = "ocn-common"
version = "0.1.0"
description = "OCN ocn-common"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "jsonschema>=4.20.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage", "ruff", "black", "mypy", "types-jsonschema"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/ocn_common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
